--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@vercel/postgres": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "bcrypt": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +34,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^1.4.0",
+    "env": "^0.0.2",
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.22",
+    "react-cookie": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "react-router-dom": "^6.11.1"
   }
 }
