--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^3.0.4",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +43,7 @@
     "nodemon": "^2.0.22",
     "react-cookie": "^4.1.1",
     "dotenv": "^16.3.1",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "pg": "^8.10.0"
   }
 }
