--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4",
-    "bcrypt": "^5.1.1",
-    "express": "^4.18.2"
+    "web-vitals": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,12 +38,12 @@
   },
   "devDependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "env": "^0.0.2",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
     "react-cookie": "^4.1.1",
-    "dotenv": "^16.3.1",
-    "react-router-dom": "^6.11.1",
-    "pg": "^8.10.0"
+    "react-router-dom": "^6.23.1"
   }
 }
